# egocylindrical

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  setup.py
cfg/: Propagator.cfg  RangeImageInflatorGenerator.cfg
data/: ec.rviz  gazebo_turtlebot.rviz  real_turtlebot.rviz
include/: CylindricalPropagator.h  cylindricalVisualization.h  egocylindrical.h  utils.h
include/egocylindrical/: CylindricalPropagator.h  can_image_core.h  can_image_core_inl.h  can_image_inflator_generator.h  coordinate_frame_helper.h  cylindricalVisualization.h  dedicated_egocylindrical.h  depth_image_common.h  depth_image_core.h  depth_image_inserter.h  depth_image_remapper.h  ecwrapper.h  egocylindrical.h  point_cloud_generator.h  point_transformer.h  point_transformer_object.h  projected_point_cloud_generator.h  range_image_converter.h  range_image_core.h  range_image_core_inl.h  range_image_generator.h  range_image_inflator_generator.h  range_to_points.h  utils.h
launch/: dedicated_nodelet.launch  egocan.launch  egocan_nodelets.launch  egocylindrical_octomap.launch  nodelets.launch  nodes.launch
msg/: EgoCylinderPoints.msg
notes/: optimization_notes.txt
src/: CylindricalPropagator.cpp  approximation_validation.cpp  can_image_core.cpp  can_image_inflator_generator.cpp  cylindricalVisualization.cpp  dedicated_egocylindrical_propagator.cpp  dedicated_egocylindrical_propagator_node.cpp  depth_image_filter.cpp  depth_image_inserter.cpp  depth_image_remapper.cpp  ec_point_cloud_node.cpp  egocylindrical.cpp  egocylindrical_propagator.cpp  egocylindrical_propagator_node.cpp  function_tester.cpp  generate_point_cloud.cpp  generate_range_image.cpp  point_cloud_core.cpp  point_cloud_generator.cpp  point_cloud_node.cpp  point_cloud_nodelet.cpp  point_transformer.cpp  projected_point_cloud_core.cpp  projected_point_cloud_generator.cpp  projected_point_cloud_node.cpp  projected_point_cloud_nodelet.cpp  range_image_converter.cpp  range_image_converter_nodelet.cpp  range_image_core.cpp  range_image_generator.cpp  range_image_inflator_generator.cpp  range_image_inflator_node.cpp  range_image_inflator_nodelet.cpp  range_image_node.cpp  range_image_nodelet.cpp  transform_points.cpp
test/: unit_tests.cpp
